0012042: Problem with standard Qt-based Import/Export sample application

Front and right views in OCCT CSharp/mfc/qt samples were swapped.