samples/CSharp/OCCTProxy_D3D/OCCTProxyD3D.cpp
@@ -353,7 +353,7 @@ public:
   {
     if (!myView().IsNull())
     {
-      myView()->SetProj (V3d_Xpos);
+      myView()->SetProj (V3d_Yneg);
     }
   }
 
@@ -375,7 +375,7 @@ public:
   {
     if (!myView().IsNull())
     {
-      myView()->SetProj (V3d_Ypos);
+      myView()->SetProj (V3d_Xneg);
     }
   }
 
@@ -386,7 +386,7 @@ public:
   {
     if (!myView().IsNull())
     {
-      myView()->SetProj (V3d_Xneg);
+      myView()->SetProj (V3d_Ypos);
     }
   }
 
@@ -397,7 +397,7 @@ public:
   {
     if (!myView().IsNull())
     {
-      myView()->SetProj (V3d_Yneg);
+      myView()->SetProj (V3d_Xpos);
     }
   }
 
